--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,59 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  -webkit-font-smoothing: antialiased; /* 텍스트를 부드럽게 렌더링 */
+  -moz-osx-font-smoothing: grayscale; /* macOS 환경에서 그레이스케일 렌더링 */
+  text-rendering: optimizeLegibility; /* 글자 선명도 향상 */
+}
 
+
+@font-face {
+  font-family: "SejonghospitalLight";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2312-1@1.1/SejonghospitalLight.woff2")
+    format("woff2");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SejonghospitalBold";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2312-1@1.1/SejonghospitalBold.woff2")
+    format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'GmarketSansMedium';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+body {
+  font-family: "SejonghospitalLight", sans-serif;
+  color: #222;
+}
 .swiper {
-    margin: 100px auto;
-    width: 320px;
-    height: 240px;
-  }
-  
-  .swiper-slide {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 22px;
-    font-weight: bold;
-    color: #fff;
-  }
-  
-  .swiper-slide:nth-child(1n) {
-    background-color: rgb(206, 17, 17);
-  }
-  
-  .swiper-slide:nth-child(2n) {
-    background-color: rgb(0, 140, 255);
-  }
-  
-  .swiper-slide:nth-child(3n) {
-    background-color: rgb(10, 184, 111);
-  }
-  
-  .swiper-slide:nth-child(4n) {
-    background-color: rgb(211, 122, 7);
-  }
-  
-  .swiper-slide:nth-child(5n) {
-    background-color: rgb(118, 163, 12);
-  }
-  
-  .swiper-slide:nth-child(6n) {
-    background-color: rgb(180, 10, 47);
-  }
-  
-  .swiper-slide:nth-child(7n) {
-    background-color: rgb(35, 99, 19);
-  }
-  
-  .swiper-slide:nth-child(8n) {
-    background-color: rgb(0, 68, 255);
-  }
-  
-  .swiper-slide:nth-child(9n) {
-    background-color: rgb(218, 12, 218);
-  }
-  
-  .swiper-slide:nth-child(10n) {
-    background-color: rgb(54, 94, 77);
-  }
-  
+  width: 100%;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: geometricPrecision;
+}
+
+.swiper-slide {
+  display: flex;
+  background: #fff;
+  border: 1px solid #cfcfcf;
+  padding: 20px;
+  border-radius: 20px;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: geometricPrecision;
+  backface-visibility: hidden;
+}
+.swiper-pagination-bullet-active {
+  background: #222;
+}
